Fixes scrollbar widht for submenu-block

--- a/src/scss/components/_submenu.scss
+++ b/src/scss/components/_submenu.scss
@@ -118,6 +118,7 @@
   will-change: transform;
   user-select: none;
   cursor: pointer;
+  scrollbar-width: none;
 
   &::-webkit-scrollbar {
     display: none;
